--- a/Synergetics/www/css/jquery.mobile.flatui.css
+++ b/Synergetics/www/css/jquery.mobile.flatui.css
@@ -2335,8 +2335,10 @@ ol.ui-listview, ol.ui-listview .ui-li-divider { counter-reset: listnumbering; }
 ol.ui-listview .ui-link-inherit:before, ol.ui-listview .ui-li-static:before, .ui-li-dec { font-size: .8em; display: inline-block; padding-right: .3em; font-weight: normal; counter-increment: listnumbering; content: counter(listnumbering) ". "; }
 ol.ui-listview .ui-li-jsnumbering:before { content: "" !important; } /* to avoid chance of duplication */
 .ui-listview .ui-li > .ui-btn-text {
+    height: 45px;
 	-webkit-border-radius: inherit;
 	border-radius: inherit;
+    
 }
 .ui-listview > .ui-li.ui-first-child,
 .ui-listview .ui-btn.ui-first-child > .ui-li > .ui-btn-text > .ui-link-inherit {
